# gcp-test

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: docker-publish.yml
src/gcp_test/: __main__.py  app.py
src/gcp_test/routers/: __init__.py  main.py
